<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.7</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>fr.real.supervision</groupId>
	<artifactId>appliinfo</artifactId>
	<version>1.3.0.0-SNAPSHOT</version>
	<name>appliinfo</name>
	<description>Supervision des alertes</description>

	<properties>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>
		<karate.version>0.9.6</karate.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<deployit.application.name>APPLIINFO</deployit.application.name>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>2021.0.5</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>com.oracle.database.jdbc</groupId>
			<artifactId>ojdbc8</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-xml</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.thymeleaf.extras</groupId>
			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
		</dependency>
		<dependency>
			<groupId>nz.net.ultraq.thymeleaf</groupId>
			<artifactId>thymeleaf-layout-dialect</artifactId>
		</dependency>

		<!-- Pour avoir l'autocompletion sur les propriété définies dans le code -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>com.vaadin.external.google</groupId>
					<artifactId>android-json</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.security.kerberos</groupId>
			<artifactId>spring-security-kerberos-core</artifactId>
			<version>1.0.1.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Pour le client ITM -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
		</dependency>

		<!-- Pour le client Rest teamit SMS -->
		<dependency>
			<groupId>com.konghq</groupId>
			<artifactId>unirest-java</artifactId>
			<version>2.3.08</version>
		</dependency>

		<dependency>
			<groupId>com.konghq</groupId>
			<artifactId>unirest-objectmapper-jackson</artifactId>
			<version>2.3.08</version>
		</dependency>

		<dependency>
			<groupId>javax.interceptor</groupId>
			<artifactId>javax.interceptor-api</artifactId>
			<version>1.2.2</version>
		</dependency>

		<!-- Test Dependencies -->
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.hamcrest</groupId>
					<artifactId>hamcrest-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.intuit.karate</groupId>
			<artifactId>karate-apache</artifactId>
			<version>${karate.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.intuit.karate</groupId>
			<artifactId>karate-junit4</artifactId>
			<version>${karate.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>net.masterthought</groupId>
			<artifactId>cucumber-reporting</artifactId>
			<version>3.9.0</version>
			<scope>test</scope>
		</dependency>

		<!-- Pour tester le client d'envoi de mail -->
		<dependency>
			<groupId>com.icegreen</groupId>
			<artifactId>greenmail</artifactId>
			<version>1.5.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.unboundid</groupId>
			<artifactId>unboundid-ldapsdk</artifactId>
			<version>6.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter</artifactId>
		</dependency>
	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>${project.basedir}/src/main/resources</directory>
			</resource>
			<resource>
				<filtering>true</filtering>
				<directory>${project.basedir}/src/main/resources</directory>
				<includes>
					<include>config/application.properties</include>
				</includes>
			</resource>
		</resources>

		<testResources>
			<testResource>
				<directory>src/test/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</testResource>
		</testResources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.9.0</version>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.22</version>
						</path>
					</annotationProcessorPaths>
					<source>17</source>
					<target>17</target>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
			</plugin>

			<!-- Sass compiler -->
			<plugin>
				<groupId>nl.geodienstencentrum.maven</groupId>
				<artifactId>sass-maven-plugin</artifactId>
				<!-- 3.6.1 requires maven 3.2.5 -->
				<!-- 3.7.3 requires maven 3.3.9 -->
				<version>3.6.1</version>
				<executions>
					<execution>
						<id>build</id>
						<phase>generate-resources</phase>
						<goals>
							<goal>update-stylesheets</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<sassSourceDirectory>
						${project.basedir}/src/main/scss
					</sassSourceDirectory>
					<destination>
						${project.basedir}/target/classes/static/css
					</destination>
					<sassOptions>
						<cache>true</cache>
						<always_update>true</always_update>
					</sassOptions>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>**/*_IT.java</exclude>
						<exclude>**/e2e/**/*.java</exclude>
						<exclude>**/ItmClientTest.java</exclude>
						<exclude>**/MailClientTest.java</exclude>
						<exclude>**/SmsClientTest.java</exclude>
					</excludes>

					<includes>
						<include>**/ut/**/*Test.java</include>
					</includes>
					<systemProperties>
						<cucumber.options>--plugin
							json:target/surefire-reports/cucumber.json</cucumber.options>
						<cucumber.options>--plugin
							junit:target/surefire-reports/cucumber-junit.xml</cucumber.options>
						<cucumber.options>--plugin html:target/surefire-reports/cucumber</cucumber.options>
					</systemProperties>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<includes>
						<include>**/*_IT.java</include>
					</includes>
				</configuration>
				<executions>
					<execution>
						<id>integration-test</id>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>3.7.0.1746</version>
			</plugin>

			<plugin>
				<groupId>fr.appli.socle.plugins</groupId>
				<artifactId>placeholder-maven-plugin</artifactId>
				<version>0.4.0</version>
			</plugin>
			<plugin>
				<groupId>com.xebialabs.xldeploy</groupId>
				<artifactId>xldeploy-maven-plugin</artifactId>
				<version>6.0.2</version>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.owasp</groupId>
					<artifactId>dependency-check-maven</artifactId>
					<dependencies>
						<dependency>
							<groupId>org.mariadb.jdbc</groupId>
							<artifactId>mariadb-java-client</artifactId>
							<version>2.7.3</version>
						</dependency>
					</dependencies>
					<configuration>
						<!-- Sets whether the Node Audit Analyzer should be used. This analyzer
                            requires an internet connection. -->
						<nodeAuditAnalyzerEnabled>false</nodeAuditAnalyzerEnabled>
						<!-- Sets whether the OSS Index Analyzer will be enabled. This analyzer
                            requires an internet connection. -->
						<ossindexAnalyzerEnabled>false</ossindexAnalyzerEnabled>
						<!-- Sets whether the RetireJS Analyzer should be used. -->
						<retireJsAnalyzerEnabled>false</retireJsAnalyzerEnabled>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>




	<profiles>
		<profile>
			<id>dev</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<skip>false</skip>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>production</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<skip>false</skip>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<!-- Profil utilisé pour livrer une version avec deployit -->
		<profile>
			<id>deployit</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<skip>false</skip>
						</configuration>
					</plugin>
					<plugin>
						<groupId>fr.appli.socle.plugins</groupId>
						<artifactId>placeholder-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>placeholder-plugin</id>
								<phase>pre-integration-test</phase>
								<goals>
									<goal>replace</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<directories>
								<directory>
									<input>${project.basedir}/src/main/resources/config/</input>
									<output>${project.build.directory}/placeholder/config/</output>
								</directory>
							</directories>
						</configuration>
					</plugin>
					<plugin>
						<groupId>com.xebialabs.xldeploy</groupId>
						<artifactId>xldeploy-maven-plugin</artifactId>
						<version>6.0.2</version>
						<executions>
							<execution>
								<id>deployit-plugin-test</id>
								<phase>pre-integration-test</phase>
								<goals>
									<goal>import</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<applicationName>${deployit.application.name}</applicationName>
							<server>deployit</server>
							<port>80</port>
							<serverAddress>deployit.production-real.fr</serverAddress>
							<environmentId>Environments/Integration/APPLIINFO/${deployit.application.name}/INT
								- APPLIINFO</environmentId>
							<deployables>

								<adsn.MicroServiceSpec
									name="${deployit.application.name}">
									<file>${deployit.application.name}/${project.artifactId}-${project.version}.jar</file>
									<location>${project.build.directory}/${project.artifactId}-${project.version}.jar</location>
									<microServiceOptions>
										<value>--spring.config.additional-location={{app_properties.path}}</value>
										<value>--logging.config={{app.conf}}/logback.xml</value>
									</microServiceOptions>
									<healthUrl>http://$SERVER_ADDRESS:{{port}}/exploitation</healthUrl>
								</adsn.MicroServiceSpec>

								<adsn.MicroServiceConfigurationFolder
									name="${deployit.application.name}_ConfigurationFolder">
									<file>${deployit.application.name}_ConfigurationFolder/config</file>
									<location>${project.build.directory}/placeholder/config</location>
									<serviceReference>${deployit.application.name}</serviceReference>
								</adsn.MicroServiceConfigurationFolder>

							</deployables>

						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>dependency-check</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.owasp</groupId>
						<artifactId>dependency-check-maven</artifactId>
						<configuration>
							<serverId>dependency-check-db</serverId>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>